feat: guilds & notification

--- a/src/languages/en-US/common.json
+++ b/src/languages/en-US/common.json
@@ -1,5 +1,7 @@
 {
+	"accept": "Accept",
 	"aliases": "Aliases",
+	"approve": "Approve",
 	"armor": "Armor",
 	"assassin": "Assassin",
 	"awake": "Awake",
@@ -10,16 +12,62 @@
 	"challenges": "Challenges",
 	"chooseClass": "Choose class",
 	"class": "Class",
+	"complete": "Complete",
 	"consumables": "Consumables",
 	"cooldown": "Cooldown",
 	"create": "Create",
 	"daily": "Daily",
+	"demote": "Demote",
+	"deny": "Deny",
 	"descriptions": {
 		"awakeName": "Your character name",
 		"buyItem": "The item you want to buy.",
 		"buyQuantity": "The amount of items you want to buy.",
 		"giveHunter": "The Hunter you want to give.",
 		"giveQuantity": "The amount of golds you want to give.",
+		"guildApprove": "Approve the join request",
+		"guildApproveHunter": "Requested hunter",
+		"guildCreate": "Create a Guild",
+		"guildCreateIcon": "The Guild Icon",
+		"guildCreateInviteCode": "The Server Invite",
+		"guildCreateName": "The Guild name",
+		"guildDemote": "Demote a Staff/Vice Master to Member role",
+		"guildDemoteHunter": "The Hunter to Demote",
+		"guildDemoteRole": "Role to demote to",
+		"guildDeny": "Deny the request",
+		"guildDenyHunter": "Requested hunter",
+		"guildDonate": "Donate materials, equipment to the guild!",
+		"guildDonateQuantity": "Amount of donation ",
+		"guildDonateType": "Type of donation",
+		"guildHunter": "Guild member",
+		"guildInfo": "The information of the guild",
+		"guildJoinRequests": "Guild join requests list",
+		"guildKick": "Kick a guild member",
+		"guildKickReason": "Reason to kick this member",
+		"guildLeave": "Leave the guild",
+		"guildLogs": "The Guild activities logs",
+		"guildMaster": "Guild Master/Vice Master commands",
+		"guildMember": "Commands of Guild Members",
+		"guildNewcomerPromote": "Promote a Newcomer to a Member",
+		"guildNewcomerPromoteHunter": "The Newcomer to Promote",
+		"guildPromote": "Promotes member to Staff/Vice Master",
+		"guildPromoteHunter": "The Hunter to promote",
+		"guildPromoteRole": "Role to promote to",
+		"guildQuest": "Quest Commands",
+		"guildQuestComplete": "Complete the taken quest",
+		"guildQuestGiveUp": "Give up and take penalty",
+		"guildQuestList": "Quests board",
+		"guildQuestTake": "Take the quest",
+		"guildQuestTakeQuest": "The quest to take",
+		"guildRequirementType": "Requirement type",
+		"guildRequirementValue": "The Level/Rank value",
+		"guildSetRequirement": "Set the joining requirement for this Guild",
+		"guildShop": "Guild shop",
+		"guildStaff": "Commands for Guild Staffs",
+		"guildTransfer": "Transfer Guild Master role to a Vice Master",
+		"guildTransferHunter": "Pick a Vice Master",
+		"guildUpgrade": "Upgrade the guild",
+		"guildUpgradeType": "Guild upgrade type",
 		"hunterInventory": "The hunter to show.",
 		"hunterProfile": "The hunter to show.",
 		"language": "The language you want",
@@ -52,25 +100,35 @@
 		"useItem": "The item you wanna use."
 	},
 	"disband": "Disband",
+	"donate": "Donate",
 	"drink": "Drink",
 	"drop": "Drops",
+	"equipment": "Equipment",
 	"examples": "Examples",
 	"fighter": "Fighter",
 	"gate": "Gate",
 	"give": "Give",
+	"giveUp": "Give up",
 	"global": "Global",
 	"gloves": "Gloves",
 	"guild": "Guild",
+	"guildBoost": "Boost",
+	"guildMemberCapacity": "Member capacity",
+	"guildShopSlots": "Shop slots",
+	"guildVaultSize": "Vault size",
 	"heal": "Heal",
 	"healer": "Healer",
 	"helmet": "Helmet",
 	"help": "Help",
 	"hunter": "Hunter",
+	"icon": "Icon",
 	"info": "Info",
 	"information": "Information",
 	"inventory": "Inventory",
 	"invite": "Invite",
+	"inviteCode": "Invite code",
 	"item": "Item",
+	"join-requests": "Join requests",
 	"keys": "Keys",
 	"kick": "Kick",
 	"language": "Language",
@@ -87,10 +145,15 @@
 	},
 	"library": "Library",
 	"links": "Useful links",
+	"list": "List",
+	"logs": "Logs",
 	"loots": "Loots",
 	"mage": "Mage",
+	"master": "Master",
+	"material": "Material",
 	"materials": "Materials",
 	"max": "Max",
+	"member": "Member",
 	"missingField": "Missing these fields: {{fields}}",
 	"money": "Money",
 	"name": "Name",
@@ -98,28 +161,37 @@
 	"no": "No",
 	"none": "none",
 	"notEnough": "Not enough {{what}}!",
+	"notification": "Notification",
 	"page": "Page",
 	"page_format": "Page {{page}}/{{total}}",
 	"party": "Party",
 	"profile": "Profile",
+	"promote": "Promote",
 	"quantity": "Quantity",
+	"quest": "Quest",
 	"ranger": "Ranger",
 	"rank": "Rank",
 	"ready": "Ready",
+	"reason": "Reason",
 	"recover": "Recover",
 	"ring": "Ring",
+	"role": "Role",
 	"rule": "Rules",
 	"selectMenuPlaceholder": "Make a selection",
 	"sell": "Sell",
 	"sellValue": "Sell value",
 	"server": "Server",
+	"setRequirement": "Set requirement",
 	"shard": "Shard",
 	"shoes": "Shoes",
+	"shop": "Shop",
 	"show": "Show",
 	"skills": "Skills",
 	"smallTurn": "Small turn",
 	"species": "Species",
+	"staff": "Staff",
 	"start": "Start",
+	"take": "Take",
 	"tanker": "Tanker",
 	"term": "Terms",
 	"timeUnits": {
@@ -157,10 +229,13 @@
 	"transfer": "Transfer",
 	"type": "Type",
 	"unspecialized": "Unspecialized",
+	"upgrade": "Upgrade",
 	"uptime": "Uptime",
 	"usableKeys": "Keys",
 	"usage": "Usage",
 	"use": "Use",
+	"value": "Value",
+	"viceMaster": "Vice Master",
 	"vote": "Vote",
 	"weapon": "Weapon",
 	"weekly": "Weekly",
