--- a/src/languages/vi/common.json
+++ b/src/languages/vi/common.json
@@ -1,5 +1,7 @@
 {
+	"accept": "Chấp nhận",
 	"aliases": "Tên khác",
+	"approve": "Chấp thuận",
 	"armor": "Áo giáp",
 	"assassin": "Sát thủ",
 	"awake": "Thức tỉnh",
@@ -10,16 +12,62 @@
 	"challenges": "Thử thách",
 	"chooseClass": "Chọn nghề",
 	"class": "Nghề",
+	"complete": "Hoàn thành",
 	"consumables": "Tiêu thụ",
 	"cooldown": "Cooldown",
 	"create": "Tạo",
 	"daily": "Hàng ngày",
+	"demote": "Giáng chức",
+	"deny": "Từ chối",
 	"descriptions": {
 		"awakeName": "Tên nhân vật",
 		"buyItem": "Vật phẩm mà bạn muốn mua.",
 		"buyQuantity": "Số lượng vật phẩm bạn muốn mua.",
 		"giveHunter": "Thợ săn mà bạn muốn gửi vàng đến.",
 		"giveQuantity": "Số lượng vàng mà bạn muốn gửi.",
+		"guildApprove": "Chấp thuận yêu cầu",
+		"guildApproveHunter": "Thợ săn yêu cầu",
+		"guildCreate": "Tạo một Bang hội mới",
+		"guildCreateIcon": "Biểu tượng của bang hội",
+		"guildCreateInviteCode": "Link lời mời tham gia máy chủ",
+		"guildCreateName": "Tên bang hội",
+		"guildDemote": "Giáng chức một Nhân Viên hay Phó Bang Hội xuống Thành Viên",
+		"guildDemoteHunter": "Thành viên bị giáng chức",
+		"guildDemoteRole": "Chức vụ mà thành viên bị giáng xuống",
+		"guildDeny": "Từ chối yêu cầu tham gia",
+		"guildDenyHunter": "Thợ săn yêu cầu",
+		"guildDonate": "Đóng góp nguyên liệu, trang bị cho bang hội!",
+		"guildDonateQuantity": "Số lượng",
+		"guildDonateType": "Hình thức đóng góp",
+		"guildHunter": "Thành viên bang hội",
+		"guildInfo": "Thông tin bang hội",
+		"guildJoinRequests": "Danh sách yêu cầu tham gia bang hội",
+		"guildKick": "Đá một thành viên ra khỏi bang hội",
+		"guildKickReason": "Lí do đuổi thành viên này",
+		"guildLeave": "Rời khỏi bang hội",
+		"guildLogs": "Nhật kí hoạt động của bang hội",
+		"guildMaster": "Các lệnh của Hội trưởng/Phó hội trưởng",
+		"guildMember": "Lệnh của thành viên bang hội",
+		"guildNewcomerPromote": "Nhận một người mới thành thành viên chính thức",
+		"guildNewcomerPromoteHunter": "Thành viên mới",
+		"guildPromote": "Thăng chức thành viên thành Staff/Phó hội trưởng",
+		"guildPromoteHunter": "Thành viên được thăng chức",
+		"guildPromoteRole": "Chức vụ mà thành viên được thăng lên",
+		"guildQuest": "Các lệnh về Nhiệm vụ của bang hội",
+		"guildQuestComplete": "Hoàn thành nhiệm vụ đã nhận",
+		"guildQuestGiveUp": "Từ bỏ và nhận hình phạt",
+		"guildQuestList": "Bảng nhiệm vụ",
+		"guildQuestTake": "Nhận nhiệm vụ",
+		"guildQuestTakeQuest": "Nhiệm vụ muốn nhận",
+		"guildRequirementType": "Loại yêu cầu",
+		"guildRequirementValue": "Cấp độ/Hạng yêu cầu",
+		"guildSetRequirement": "Đặt yêu cầu gia nhập của Bang hội",
+		"guildShop": "Cửa hàng bang hội",
+		"guildStaff": "Lệnh của Nhân viên Bang hội",
+		"guildTransfer": "Chuyển nhượng vị trí Trưởng Bang Hội cho một Phó Bang Hội",
+		"guildTransferHunter": "Chọn 1 Phó Bang Hội",
+		"guildUpgrade": "Nâng cấp bang hội",
+		"guildUpgradeType": "Loại nâng cấp",
 		"hunterInventory": "Người bạn muốn xem.",
 		"hunterProfile": "Người bạn muốn xem.",
 		"language": "Ngôn ngữ mà bạn muốn đổi",
@@ -52,25 +100,35 @@
 		"useItem": "Vật phẩm mà bạn muốn sử dụng."
 	},
 	"disband": "Giải tán",
+	"donate": "Đóng góp",
 	"drink": "Hồi năng lượng",
 	"drop": "Vật phẩm",
+	"equipment": "Trang bị",
 	"examples": "Ví dụ",
 	"fighter": "Đấu sĩ",
 	"gate": "Cổng",
 	"give": "Gửi",
+	"giveUp": "Từ bỏ",
 	"global": "Thế giới",
 	"gloves": "Găng",
 	"guild": "Bang hội",
+	"guildBoost": "Tăng thưởng",
+	"guildMemberCapacity": "Số lượng thành viên",
+	"guildShopSlots": "Kich thước cửa hàng",
+	"guildVaultSize": "Kích thước kho",
 	"heal": "Hồi máu",
 	"healer": "Hồi phục sư",
 	"helmet": "Mũ",
 	"help": "Trợ giúp",
 	"hunter": "Thợ săn",
+	"icon": "Biểu tượng",
 	"info": "Thông tin",
 	"information": "Thông tin",
 	"inventory": "Kho đồ",
 	"invite": "Mời",
+	"inviteCode": "Invite code",
 	"item": "Vật phẩm",
+	"join-requests": "Yêu cầu",
 	"keys": "Khóa",
 	"kick": "Đá",
 	"language": "Ngôn ngữ",
@@ -87,10 +145,15 @@
 	},
 	"library": "Thư viện",
 	"links": "Useful links",
+	"list": "Danh sách",
+	"logs": "Nhật ký",
 	"loots": "Chiến lợi phẩm",
 	"mage": "Pháp sư",
+	"master": "Hội trưởng",
+	"material": "Vật liệu",
 	"materials": "Vật liệu",
 	"max": "Tối đa",
+	"member": "Thành viên",
 	"missingField": "Thiếu mục: {{fields}}",
 	"money": "Tiền tệ",
 	"name": "Tên",
@@ -98,28 +161,37 @@
 	"no": "Không",
 	"none": "không",
 	"notEnough": "Không đủ {{what}}!",
+	"notification": "Thông báo",
 	"page": "Trang",
 	"page_format": "Trang {{page}}/{{total}}",
 	"party": "Tổ đội",
 	"profile": "Hồ sơ",
+	"promote": "Thăng chức",
 	"quantity": "Số lượng",
+	"quest": "Nhiệm vụ",
 	"ranger": "Xạ thủ",
 	"rank": "Hạng",
 	"ready": "Sẵn sàng",
+	"reason": "Lí do",
 	"recover": "Hồi phục",
 	"ring": "Nhẫn",
+	"role": "Chức vụ",
 	"rule": "Luật",
 	"selectMenuPlaceholder": "Lựa chọn",
 	"sell": "Bán",
 	"sellValue": "Giá bán",
 	"server": "Máy chủ",
+	"setRequirement": "Đặt yêu cầu",
 	"shard": "Mảnh",
 	"shoes": "Giày",
+	"shop": "Cửa hàng",
 	"show": "Hiển thị",
 	"skills": "Kĩ năng",
 	"smallTurn": "Lượt phụ",
 	"species": "Chủng loại",
+	"staff": "Nhân viên",
 	"start": "Hướng dẫn",
+	"take": "Nhận",
 	"tanker": "Đỡ đòn",
 	"term": "Thuật ngữ",
 	"timeUnits": {
@@ -157,10 +229,13 @@
 	"transfer": "Chuyển nhượng",
 	"type": "Loại",
 	"unspecialized": "Tán nhân",
+	"upgrade": "Nâng cấp",
 	"uptime": "Uptime",
 	"usableKeys": "Khóa",
 	"usage": "Sử dụng",
 	"use": "Sử dụng",
+	"value": "Giá trị",
+	"viceMaster": "Phó bang hội",
 	"vote": "Bình chọn",
 	"weapon": "Vũ khí",
 	"weekly": "Hàng tuần",
