--- a/src/languages/en-US/constant.json
+++ b/src/languages/en-US/constant.json
@@ -32,24 +32,24 @@
 			"SS-rank key": "<:s:740423956208812113>",
 			"Uprank key": "<:s:740175804339585024>"
 		},
-		"life potion": "<:s:740053804463947776>",
+		"Life Potion I": "<:s:740053804463947776>",
 		"lottery ticket": "<:s:763331798423044097>",
-		"mana potion": "<:s:740053804480856074>",
+		"Mana Potion I": "<:s:740053804480856074>",
 		"materials": {
-			"Briga's Claw": "<:s:749291018763108383>",
-			"Briga's Fur": "<:s:749291018423107675>",
-			"Goblin's Cloth": "<:s:749291059657441290>",
-			"Goblin's Eye": "<:s:749291059615629333>",
-			"Raikan's Fang": "<:s:749290982037782599>",
-			"Raikan's Fur": "<:s:749290981601443942>",
-			"Rasaka's Eye": "<:s:749291094969155644>",
-			"Rasaka's Poison Fang": "<:s:752077738008903681>",
-			"Rasaka's Red Scale": "<:s:749292242497306664>",
-			"Rasaka's Scale": "<:s:749291094570827817>",
-			"Razan's Fang": "<:s:749291136945750147>",
-			"Razan's Fur": "<:s:749291136975241266>",
-			"Stone Golem's Core": "<:s:751417103831138386>",
-			"Stone Golem's Skin Shard": "<:s:749290950072729661>"
+			"Briga Claw": "<:s:749291018763108383>",
+			"Briga Fur": "<:s:749291018423107675>",
+			"Goblin Cloth": "<:s:749291059657441290>",
+			"Goblin Eye": "<:s:749291059615629333>",
+			"Raikan Fang": "<:s:749290982037782599>",
+			"Raikan Fur": "<:s:749290981601443942>",
+			"Rasaka Eye": "<:s:749291094969155644>",
+			"Rasaka Poison Fang": "<:s:752077738008903681>",
+			"Rasaka Red Scale": "<:s:749292242497306664>",
+			"Rasaka Scale": "<:s:749291094570827817>",
+			"Razan Fang": "<:s:749291136945750147>",
+			"Razan Fur": "<:s:749291136975241266>",
+			"Stone Golem Core": "<:s:751417103831138386>",
+			"Stone Golem Skin Shard": "<:s:749290950072729661>"
 		},
 		"pvp": "<:s:724541953978662972>",
 		"quest": "<:s:724541953961623572>",
@@ -73,7 +73,8 @@
 			"mp": "<:s:741719020419678258>",
 			"mr": "<:s:741719020549439538>",
 			"str": "<:s:741719020478136365>",
-			"vit": "<:s:758152007126745131>"
+			"vit": "<:s:758152007126745131>",
+			"luk": "<:s:758152007474610226>"
 		}
 	},
 	"notification": "{{notification_message}}",
