--- a/src/languages/en-US/validation.json
+++ b/src/languages/en-US/validation.json
@@ -85,17 +85,17 @@
 				"CONFIG": "Configure your gate.\n`stats` on will auto show stats each turn.\n`logs` on will show logs each turn.\n`ping` will auto ping you when its your turn.",
 				"COOLDOWN": "Show your cooldowns",
 				"CRAFT": "***Not developed yet***",
-				"DAILY": "Get $t(constant:emojis.currencies.gold), $t(constant:emojis.life potion) and $t(constant:emojis.mana potion) depending on your level and streak",
+				"DAILY": "Get $t(constant:emojis.currencies.gold), $t(constant:emojis.Life Potion I) and $t(constant:emojis.Mana Potion I) depending on your level and streak",
 				"DICE": "***Not developed yet***",
 				"DONATOR": "Show the donator status\n*(Only works in the $t(glossary:WHA))*",
-				"DRINK": "Use a mana potion in your inventory.",
+				"DRINK": "Use a Mana Potion I in your inventory.",
 				"DUEL": "Fight with the mentioned hunter, the hunter who win the fight will get golds and exp",
 				"EQUIP": "Show your equipments or equip a new item",
 				"GATE": "Open a gate to enter a dungeon\n*`\\guide`* to see more info",
 				"GIVE": "Give another hunter golds",
 				"GUIDE": "Show the guide",
 				"GUILD": "Show your guild or the guild(server) you are playing in\nUse `\\guild help` to see more commands",
-				"HEAL": "Use a life potion in your inventory.",
+				"HEAL": "Use a Life Potion I in your inventory.",
 				"HELP": "Displays a list of available commands, or detailed information for a specified command/item.",
 				"INFO": "Show info about the bot",
 				"INVENTORY": "Show your inventory",
@@ -264,12 +264,12 @@
 			"def": "$t(constant:emojis.stats.def) **$t(glossary:stats:def)**: {{def, number}} ({{eqDef, eqStats}})",
 			"hp": "$t(constant:emojis.stats.hp) **$t(glossary:stats:hp)**: {{hp, number}}/{{maxHp, number}}",
 			"int": "$t(constant:emojis.stats.int) **$t(glossary:stats:int)**: {{int, number}} ({{eqInt, eqStats}})",
-			"left": "$t(validation:profile.stats.hp, {\"hp\":\"{{hp}}\",\"maxHp\":\"{{maxHp}}\"})\n$t(validation:profile.stats.str, {\"context\":\"equipment\",\"str\":\"{{str}}\",\"eqStr\":\"{{eqStr}}\"})\n$t(validation:profile.stats.def, {\"context\":\"equipment\",\"def\":\"{{def}}\",\"eqDef\":\"{{eqDef}}\"})\n$t(validation:profile.stats.vit, {\"context\":\"equipment\",\"vit\":\"{{vit}}\",\"eqVit\":\"{{eqVit}}\"})",
+			"left": "$t(validation:profile.stats.hp, {\"hp\":\"{{hp}}\",\"maxHp\":\"{{maxHp}}\"})\n$t(validation:profile.stats.str, {\"context\":\"equipment\",\"str\":\"{{str}}\",\"eqStr\":\"{{eqStr}}\"})\n$t(validation:profile.stats.def, {\"context\":\"equipment\",\"def\":\"{{def}}\",\"eqDef\":\"{{eqDef}}\"})\n$t(validation:profile.stats.luk, {\"context\":\"equipment\",\"luk\":\"{{luk}}\",\"eqLuk\":\"{{eqLuk}}\"})",
 			"mp": "$t(constant:emojis.stats.mp) **$t(glossary:stats:mp)**: {{mp, number}}/{{maxMp, number}}",
 			"mr": "$t(constant:emojis.stats.mr) **$t(glossary:stats:mr)**: {{mr, number}} ({{eqMr, eqStats}})",
 			"right": "$t(validation:profile.stats.mp, {\"mp\":\"{{mp}}\",\"maxMp\":\"{{maxMp}}\"})\n$t(validation:profile.stats.int, {\"context\":\"equipment\",\"int\":\"{{int}}\",\"eqInt\":\"{{eqInt}}\"})\n$t(validation:profile.stats.mr, {\"context\":\"equipment\",\"mr\":\"{{mr}}\",\"eqMr\":\"{{eqMr}}\"})\n$t(validation:profile.stats.agi, {\"context\":\"equipment\",\"agi\":\"{{agi}}\",\"eqAgi\":\"{{eqAgi}}\"})",
 			"str": "$t(constant:emojis.stats.str) **$t(glossary:stats:str)**: {{str, number}} ({{eqStr, eqStats}})",
-			"vit": "$t(constant:emojis.stats.vit) **$t(glossary:stats:vit)**: {{vit, number}} ({{eqVit, eqStats}})"
+			"luk": "$t(constant:emojis.stats.luk) **$t(glossary:stats:luk)**: {{luk, number}} ({{eqLuk, eqStats}})"
 		},
 		"statsPoint": "**Available stats points**: {{count, number}}"
 	},
